--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -17,6 +17,10 @@ form {
 	background-color: #eaeaec;
 }
 
+.margin-top-0 { margin-top:0 !important }
+.margin-bottom-0 { margin-bottom:0 !important }
+.margin-bottom-5 { margin-bottom:5px !important }
+
 .footer { padding: 10px 20px 10px 20px }
 button.btn-block { margin-bottom: 10px; }
 .login-box, .register-box { margin: 7% auto 0 }
