--- a/views/login.jade
+++ b/views/login.jade
@@ -1,29 +1,29 @@
 doctype html
-html(lang='en', ng-app='PowerDD', ng-init="action = 'login'")
+html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.apiUrl}'; apiKey = '#{config.apiKey}'; shop = '#{config.shop}'")
 	head
 		title #{__('Sign in')} | PowerDD Backend System
 		meta(charset='utf-8')
 		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/bootstrap/3.3.5/css/bootstrap.min.css')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/font-awesome/4.4.0/css/font-awesome.min.css')
-		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/AdminLTE.css')
+		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/AdminLTE.min.css')
 		link(rel='stylesheet', href='/stylesheets/login.css')
 		link(rel='shortcut icon', href='favicon.ico', type='image/x-icon')
 		link(rel='icon', href='favicon.ico', type='image/x-icon')
 
-	body.hold-transition.login-page.colorful
+	body.hold-transition.login-page.colorful(ng-controller='Auth')
 		.login-box
 			.box.box-primary
 				.box-header.text-center.bg-light-blue
 					h3.box-title(ng-show="action == 'login'") #{__('Sign in')}
 					h3.box-title.ng-hide(ng-cloak, ng-show="action == 'register'") #{__('Create account')}
 					h3.box-title.ng-hide(ng-cloak, ng-show="action == 'forgot'") #{__('Forgot password')}
-				form(ng-show="action == 'login'")
-					.form-group.has-feedback
-						input#username.form-control(type='text', placeholder="#{__('username')} #{__('or')} #{__('email')} #{__('or')} #{__('Mobile Phone Number')}")
+				form(name='formLogin', ng-show="action == 'login'")
+					.form-group.has-feedback(ng-class="{ 'has-error' : formLogin.username.$error.pattern }")
+						input.form-control(name='username', ng-model="user.username", type='text', placeholder="#{__('username')} #{__('or')} #{__('email')} #{__('or')} #{__('Mobile Phone Number')}", required)
 						span.fa.fa-user.form-control-feedback
-					.form-group.has-feedback
-						input#password.form-control(type='password', placeholder="#{__('password')}")
+					.form-group.has-feedback(ng-class="{ 'has-error' : formLogin.password.$error.$viewValue == '' }")
+						input.form-control(name='password', ng-model="user.password", type='password', placeholder="#{__('password')}", required)
 						span.fa.fa-lock.form-control-feedback
 					.checkbox.pull-left
 						label
@@ -43,13 +43,13 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'")
 
 				form.ng-hide(name='formRegister', ng-cloak, ng-show="action == 'register'")
 					.form-group.has-feedback(ng-class="{ 'has-error' : formRegister.username.$error.pattern }")
-						input#username.form-control(name='username', ng-model="user.username", type='text', placeholder="#{__('username')}", ng-pattern="/^[a-z0-9_-]{3,32}$/", required, maxlength="36")
+						input#username.form-control(name='username', ng-model="user.username", type='text', placeholder="#{__('username')}", ng-pattern="/^[A-Za-z0-9_-]{3,32}$/", required, maxlength="36")
 						span.fa.fa-user.form-control-feedback
 					.form-group.has-feedback(ng-class="{ 'has-error' : formRegister.mobile.$error.pattern }")
 						input#mobile.form-control(name='mobile', ng-model="user.mobile", type='text', placeholder="#{__('Mobile Phone Number')}", ng-pattern="/^[0]+([0-9]{8,9})$/", required, maxlength="10")
 						span.fa.fa-phone-square.form-control-feedback
 					.form-group.has-feedback(ng-class="{ 'has-error' : formRegister.email.$error.pattern }")
-						input#email.form-control(name='email', ng-model="user.email", type='text', placeholder="#{__('email')}", ng-pattern="/^[_a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/", required)
+						input#email.form-control(name='email', ng-model="user.email", type='text', placeholder="#{__('email')}", ng-pattern="/^[_A-Za-z0-9]+(\.[_A-Za-z0-9]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9-]+)*(\.[a-z]{2,4})$/", required)
 						span.fa.fa-envelope.form-control-feedback
 					.form-group.has-feedback(ng-class="{ 'has-error' : formRegister.password.$viewValue != formRegister.password2.$viewValue }")
 						input#password.form-control(name='password', ng-model="user.password", type='password', placeholder="#{__('password')}", required)
@@ -72,17 +72,22 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'")
 					.clearfix
 
 				.footer
+					
+					.text-red.ng-hide(ng-cloak, ng-show="hasError == true")
+						h4.margin-top-0 {{errorHeader}}
+						p {{errorDetail}}
+
 					#dv-info.callout.callout-info.margin-bottom-0.hidden
 						h4
 							i.fa.fa-comment
 							span.msg-header สถานะการทำงาน
 						p
-							img.loading.top-2(src='/images/icons/loading.gif', alt='loading')
 							span.msg-detail
-					button#btn-login.btn.bg-light-blue.btn-block(type='button', ng-hide="action != 'login'") #{__('Sign in')}
+					button#btn-login.btn.bg-light-blue.btn-block(type='button', disabled, ng-hide="action != 'login'", ng-click="checkLogin()", ng-disabled="formLogin.username.$error.required || formLogin.password.$error.required") #{__('Sign in')}
 					button#btn-register.btn.bg-light-blue.btn-block.ng-hide(type='button', disabled, ng-cloak, ng-hide="action != 'register'", 
 						ng-disabled="formRegister.username.$error.pattern || formRegister.username.$error.required || formRegister.mobile.$error.pattern || formRegister.mobile.$error.required || formRegister.email.$error.pattern || formRegister.password.$error.required || formRegister.password2.$error.required || formRegister.password.$viewValue != formRegister.password2.$viewValue") #{__('Create account')}
 					button#btn-check.btn.bg-light-blue.btn-block.ng-hide(type='button', ng-cloak, ng-hide="action != 'forgot'") ตรวจสอบ
+
 					p.ng-hide(ng-cloak, ng-hide="action == 'login'")
 						a(href='javascript:', ng-click="action = 'login'") #{__('Sign in')}
 					p(ng-hide="action == 'register'")
@@ -96,4 +101,4 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'")
 		script(src='//src.powerdd.com/libs/angular/ngStorage/0.3.9/ngStorage.min.js')
 		script(src='//src.powerdd.com/libs/bootstrap/3.3.5/js/bootstrap.min.js')
 		script(src='//src.powerdd.com/libs/adminlte/2.3.0/js/app.min.js')
-		script(src='/javascripts/common.js')
+		script(src='/javascripts/login.js')
