--- a/views/login.jade
+++ b/views/login.jade
@@ -20,17 +20,17 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.
 					h3.box-title.ng-hide(ng-cloak, ng-show="action == 'forgot'") #{__('Forgot password')}
 				form(name='formLogin', ng-show="action == 'login'")
 					.form-group.has-feedback(ng-class="{ 'has-error' : formLogin.username.$error.pattern }")
-						input.form-control(name='username', ng-model="user.username", type='text', placeholder="#{__('username')} #{__('or')} #{__('email')} #{__('or')} #{__('Mobile Phone Number')}", required)
+						input.form-control(name='username', ng-model="user.username", type='text', placeholder="#{__('username')} #{__('or')} #{__('email')} #{__('or')} #{__('Mobile Phone Number')}", ng-disabled="loginSuccess == true", required)
 						span.fa.fa-user.form-control-feedback
 					.form-group.has-feedback(ng-class="{ 'has-error' : formLogin.password.$error.$viewValue == '' }")
-						input.form-control(name='password', ng-model="user.password", type='password', placeholder="#{__('password')}", required, ng-keypress="login()")
+						input.form-control(name='password', ng-model="user.password", type='password', placeholder="#{__('password')}", ng-disabled="loginSuccess == true", ng-keypress="login()", required)
 						span.fa.fa-lock.form-control-feedback
 					.checkbox.pull-left
 						label
-							input#remember(type='checkbox')
+							input#remember(type='checkbox', ng-disabled="loginSuccess == true")
 							|  #{__('Stay signed in')}
 					.btn-group.pull-right
-						span.btn.dropdown-toggle(data-toggle='dropdown')
+						span.btn.dropdown-toggle(data-toggle='dropdown', ng-disabled="loginSuccess == true")
 							i.fa.fa-globe
 							|  #{__('language')}  
 							span.caret
